<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <!-- MyApplication -->
    <string name="app_name">Android Template</string>
    <string name="app_launcher_name">Template</string>

    <!-- General -->
    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="error">Error</string>
    <string name="individual">Individual</string>
    <string name="edit_individual">Edit Individual</string>
    <string name="edit">Edit</string>
    <string name="x_required">%s Required</string>
    <string name="required">Required</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="display">Display</string>
    <string name="system_default">System Default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="dynamic_theme">Dynamic Theme</string>
    <string name="theme">Theme</string>
    <string name="search_hint">Search Individuals</string>
    <string name="licenses">Licenses</string>
    <string name="acknowledgments">Acknowledgments</string>
    <string name="chats">Chats</string>
    <string name="directory">Directory</string>
    <string name="sort_by_last_name">Sort by last name</string>
    <string name="more_options">More options</string>
    <string name="people">People</string>
    <string name="hide_password">Hide Password</string>
    <string name="show_password">Show Password</string>
    <string name="typography">Typography</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_birth_date">Birth date must be before today</string>
    <string name="no_list_items">No list items</string>
    <string name="delete_message_question">Delete Message?</string>
    <string name="messages">Messages</string>

    <!-- Individual -->
    <string name="delete_individual_confirm">Are you sure you want to delete this individual?</string>

    <!-- About -->
    <string name="about_title">@string/app_name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="birth_date">Birth Date</string>
    <string name="alarm_time">Alarm Time</string>

    <string name="notification_channel_general">General Notifications</string>
    <string name="individual_type">Individual Type</string>
    <string name="head">Head</string>
    <string name="spouse">Spouse</string>
    <string name="child">Child</string>
    <string name="unkown">Unknown</string>
    <string name="available">Available</string>
    <string name="individual_type_requires_last_name">Children must supply a last name</string>
    <string name="message">Message</string>
    <string name="send_message">Send Message</string>

    <!-- App Distribution -->
    <string name="app_distribution_feedback_text">Your feedback will be used to improve this app. Your name and email will be collected along with your feedback.</string>
</resources>
