<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_edit"
        android:icon="@drawable/ic_edit_24dp"
        android:title="@string/edit"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/menu_item_delete"
        android:icon="@drawable/ic_delete_24dp"
        android:title="@string/delete"
        app:showAsAction="ifRoom|collapseActionView"/>
</menu>